# agentweave

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_TESTING.md  README.md  TESTING.md  example_agent.py  market-research.md  pyproject.toml  pytest.ini  requirements-test.txt  spec.md
agentweave/: __init__.py  agent.py  config.py  context.py  decorators.py  exceptions.py
agentweave/authz/: __init__.py  base.py  opa.py
agentweave/authz/policies/: README.md  default.rego  federation.rego
agentweave/cli/: __init__.py  main.py  utils.py
agentweave/comms/: __init__.py  discovery.py
agentweave/comms/a2a/: __init__.py  card.py  client.py  server.py  task.py
agentweave/identity/: __init__.py  base.py  mtls.py  spiffe.py
agentweave/observability/: __init__.py  audit.py  logging.py  metrics.py  tracing.py
agentweave/testing/: __init__.py  cluster.py  fixtures.py  mocks.py  policy.py
agentweave/transport/: __init__.py  channel.py  circuit.py  pool.py  retry.py
deploy/: DEPLOYMENT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yaml
deploy/helm/agentweave/: Chart.yaml  values.yaml
deploy/kubernetes/base/: agent-template.yaml  namespace.yaml  opa-config.yaml  spire-config.yaml
docs/: .gitignore  404.md  Gemfile  JEKYLL_SETUP.md  README.md  SEARCH_README.md  STYLING_SYSTEM.md  _config.yml  a2a-protocol.md  about.md  changelog.md  configuration.md  index.md  quickstart.md  robots.txt  search.md  security.md  sitemap.xml
docs/_data/: navigation.yml
docs/_includes/: README.md  breadcrumbs.html  callout.html  code-block.html  footer.html  head.html  header.html  nav.html  prev-next.html  sidebar.html  toc.html
docs/_layouts/: api.html  default.html  home.html  page.html  tutorial.html
docs/_plugins/: search_data_generator.rb
docs/_sass/: ARCHITECTURE.md  QUICK_REFERENCE.md  SAMPLE_TEMPLATE.html  _base.scss  _components.scss  _layout.scss  _mixins.scss  _utilities.scss  _variables.scss
docs/_tutorials/: agent-communication.md  first-agent.md  index.md  kubernetes-deployment.md  multi-cloud.md  observability.md  opa-policies.md
docs/api/: index.md
docs/api-reference/: agent.md  authz.md  cli.md  comms.md  config.md  context.md  decorators.md  exceptions.md  identity.md  index.md  observability.md  transport.md
docs/assets/: ASSETS_CREATED.md  COMPLETION_SUMMARY.md  FINAL_REPORT.txt  README.md  VERIFICATION.md
docs/assets/css/: README.md  home.css  main.css  main.scss  syntax.css
docs/assets/favicon/: INSTALL_INSTRUCTIONS.md  README.md  generate-pngs.sh  site.webmanifest
docs/assets/images/: LOGO_DESIGN.md
docs/assets/js/: main.js  search.js
docs/contributing/: code-of-conduct.md  development.md  index.md
docs/core-concepts/: agents.md  architecture.md  authorization.md  communication.md  identity.md  index.md  security-model.md
docs/deployment/: aws.md  azure.md  docker.md  gcp.md  helm.md  hybrid.md  index.md  kubernetes.md
docs/examples/: data-pipeline.md  federated.md  index.md  microservices.md  multi-agent.md  simple-agent.md
docs/examples/real-world/: financial-services.md  healthcare.md  index.md  iot-edge.md
docs/getting-started/: concepts.md  hello-world.md  index.md  installation.md  quickstart.md
docs/guides/: error-handling.md  identity-providers.md  index.md  performance.md  policy-patterns.md  production-checklist.md  testing.md
docs/security/: audit-logging.md  best-practices.md  compliance.md  index.md  threat-model.md
docs/troubleshooting/: common-issues.md  debugging.md  faq.md  index.md  support.md
docs/use-cases/: agentic-commerce.md  index.md
examples/data_pipeline/: README.md  pipeline.py  test_pipeline.py
examples/data_pipeline/config/: enricher.yaml  ingest.yaml  store.yaml  validator.yaml
examples/data_pipeline/policies/: pipeline.rego
examples/deploy_orchestrator/: README.md  orchestrator.py  test_orchestrator.py
examples/deploy_orchestrator/config/: environment.yaml  orchestrator.yaml
examples/deploy_orchestrator/policies/: deploy.rego
examples/federated/: README.md
examples/healthcare_gateway/: README.md  gateway.py  test_gateway.py
examples/healthcare_gateway/config/: hospital.yaml  insurance.yaml
examples/healthcare_gateway/policies/: hospital.rego
examples/multi_agent/: docker-compose.yaml  orchestrator.py  worker.py
examples/multi_agent/config/: orchestrator.yaml  worker.yaml
examples/rag_knowledge_base/: README.md  config.yaml  knowledge_agent.py  test_knowledge_agent.py
examples/simple_agent/: config.yaml  main.py
examples/support_triage/: README.md  config.yaml  test_triage.py  triage.py
tests/: conftest.py  test_agent.py  test_authz.py  test_config.py  test_identity.py
(+11 files in other folders)
