[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentweave"
version = "1.0.0"
description = "AgentWeave SDK - Python library for building cross-cloud AI agents with hardened security by default"
authors = [
    {name = "High Velocity Solutions LLC", email = "info@hvs.solutions"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["agent", "spiffe", "security", "a2a", "ai", "opa", "mtls"]

dependencies = [
    "spiffe>=0.2.4",
    "spiffe-tls>=0.3.0",
    "httpx>=0.28",
    "httpx-sse>=0.4",
    "pydantic>=2.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp>=1.30",
    "prometheus-client>=0.21",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.9",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "pytest-mock>=3.14",
    "docker>=7.1",
    "black>=25.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML>=6.0",
]

[project.scripts]
agentweave = "agentweave.cli.main:cli"

[project.urls]
Homepage = "https://github.com/aj-geddes/agentweave"
Documentation = "https://github.com/aj-geddes/agentweave/tree/main/docs"
Repository = "https://github.com/aj-geddes/agentweave"
"Bug Tracker" = "https://github.com/aj-geddes/agentweave/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agentweave*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
